--- a/scss/sections/reservation-form/_structure.scss
+++ b/scss/sections/reservation-form/_structure.scss
@@ -1,7 +1,7 @@
 // layout of reservation form
 
-@use '../partials/colors' as *;
-@use '../partials/mixins' as *;
+@use '../../partials/colors' as *;
+@use '../../partials/mixins' as *;
 
 .reservation {
     display: flex;
