--- a/scss/style.css
+++ b/scss/style.css
@@ -366,6 +366,103 @@ hr {
   color: rgb(0, 0, 0);
 }
 
+#home {
+  border-bottom: 1px solid rgb(229, 186, 115);
+}
+
+.hero-text {
+  color: rgb(240, 248, 255);
+}
+
+.small-menu__accordion {
+  background-color: rgba(248, 203, 166, 0.7);
+  color: rgb(0, 0, 0);
+}
+.small-menu__accordion:hover {
+  background-color: rgb(248, 203, 166);
+  color: rgb(255, 251, 235);
+}
+.small-menu__accordion:after {
+  color: rgb(119, 119, 119);
+}
+
+.small-menu__accordion--active {
+  background-color: rgb(248, 203, 166);
+  color: rgb(255, 251, 235);
+}
+.small-menu__accordion--active:after {
+  color: rgb(255, 251, 235);
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.small-menu__panel {
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(255, 231, 204);
+}
+
+/* Caption text */
+.small-menu__image-description {
+  background-color: rgb(229, 186, 115);
+  color: rgb(243, 243, 243);
+}
+
+.small-menu__slideshow-button--prev,
+.small-menu__slideshow-button--next {
+  color: rgb(229, 186, 115);
+}
+
+.small-menu__slideshow-dot {
+  background-color: rgb(255, 231, 204);
+}
+
+.small-menu__slideshow-dot:hover,
+.slideshow-dot--active {
+  background-color: rgb(248, 203, 166);
+}
+
+.large-menu__tab {
+  border: 1px solid rgb(255, 231, 204);
+  background-color: rgba(255, 251, 235, 0.7);
+}
+.large-menu__tab:hover {
+  background-color: rgb(248, 203, 166);
+}
+.large-menu__tab--active {
+  border: 1px solid rgb(255, 231, 204);
+  background-color: rgb(248, 203, 166);
+}
+
+.large-menu__tab-link {
+  color: rgb(0, 0, 0);
+}
+
+.large-menu__tab:hover .large-menu__tab-link {
+  color: rgb(245, 245, 245);
+}
+
+.large-menu__tab--active .large-menu__tab-link {
+  color: rgb(255, 251, 235);
+}
+
+.large-food-menu {
+  border: 1px solid rgb(255, 231, 204);
+  background-color: rgb(255, 255, 255);
+}
+
+.large-menu__item {
+  border-bottom: 1px solid rgb(255, 231, 204);
+}
+@media all and (min-width: 43.71875em) {
+  .large-menu__item {
+    border-right: 1px solid rgb(255, 231, 204);
+  }
+}
+
+.large-menu__item-price {
+  background-color: rgb(248, 203, 166);
+  color: rgb(255, 255, 255);
+}
+
 .reservation__photo img {
   border: 1px solid rgb(222, 226, 230);
   background-color: rgb(255, 255, 255);
@@ -379,7 +476,8 @@ hr {
   color: rgba(33, 37, 41, 0.7);
 }
 
-.input-control, .textarea-control {
+.input-control,
+.textarea-control {
   background-color: rgb(255, 255, 255);
   border: 1px solid rgb(206, 212, 218);
 }
@@ -389,7 +487,8 @@ hr {
   color: rgb(0, 0, 0);
 }
 
-input:focus, textarea:focus {
+input:focus,
+textarea:focus {
   border: 1px solid rgb(255, 182, 193);
   outline: 1px solid rgb(255, 182, 193);
 }
@@ -404,11 +503,14 @@ input:focus, textarea:focus {
   background-color: rgba(0, 0, 0, 0.7);
 }
 
+.contact__icon {
+  color: rgb(119, 119, 119);
+}
+
 /* links for 
 contacts in findus and
 social icons in footer  */
 .g-link {
-  cursor: pointer;
   color: rgb(224, 177, 120);
 }
 
@@ -450,6 +552,7 @@ body {
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 
 hr {
@@ -524,45 +627,16 @@ hr {
   }
 }
 
-.reservation__photo img {
-  max-height: 400px;
-  max-width: 400px;
-  width: 95%;
-  height: auto;
-  border-radius: 0.375rem;
-  padding: 0.25rem;
+.navbar {
+  z-index: 100;
 }
 
-@media all and (min-width: 575.5px) {
-  .reservation__photo img {
-    max-height: 400px;
-    max-width: 600px;
-  }
-}
-.input-control {
-  display: block;
-  width: 100%;
-  height: 3rem;
-  padding: 0.375rem 0.75rem;
-  font-size: 1.3rem;
-  font-weight: 400;
-  line-height: 1.5;
-  font-family: inherit;
-  background-clip: padding-box;
-  border-radius: 0.375rem;
+.hero-text {
+  z-index: 10;
 }
 
-.textarea-control {
-  display: block;
-  width: 100%;
-  height: 6rem;
-  padding: 0.375rem 0.75rem;
-  font-size: 1.3rem;
-  font-weight: 400;
-  line-height: 1.5;
-  font-family: inherit;
-  background-clip: padding-box;
-  border-radius: 0.375rem;
+.large-menu__tab-link::after {
+  z-index: 1;
 }
 
 .website-content--hidden {
@@ -619,7 +693,6 @@ hr {
   top: 0;
   right: 0;
   left: 0;
-  z-index: 100;
   font-size: clamp(1.5rem, 1rem + 1vw, 2rem);
 }
 
@@ -720,6 +793,64 @@ hr {
     padding-left: 0.5rem;
   }
 }
+section:not(:first-of-type) {
+  max-width: 100%;
+  padding-inline: 1rem;
+  margin-inline: auto;
+  padding-block: calc(1rem + 1.5vw);
+}
+@media all and (min-width: 36em) {
+  section:not(:first-of-type) {
+    max-width: 800px;
+    padding-inline: 2rem;
+  }
+}
+@media all and (min-width: 62em) {
+  section:not(:first-of-type) {
+    max-width: 1150px;
+    padding-inline: 2.5rem;
+  }
+}
+@media all and (min-width: 78.125em) {
+  section:not(:first-of-type) {
+    max-width: 1500px;
+    padding-inline: 2rem;
+  }
+}
+
+section#menu {
+  max-width: 100%;
+}
+@media all and (min-width: 78.125em) {
+  section#menu {
+    max-width: 1300px;
+    padding-inline: 2rem;
+  }
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-block: calc(1rem + 1vw);
+}
+
+.social-icons > * {
+  margin: 20px 10px;
+}
+
+#home {
+  padding-top: 70px;
+  position: relative;
+}
+@media all and (min-width: 23.46875em) {
+  #home {
+    padding-top: 0;
+  }
+}
+
 #home img,
 #home source {
   max-width: 100%;
@@ -729,6 +860,18 @@ hr {
   overflow-clip-margin: content-box;
   overflow: clip;
   vertical-align: middle;
+}
+
+.hero-text {
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
+}
+@media all and (min-width: 36em) {
+  .hero-text {
+    bottom: 5%;
+    left: 3%;
+  }
 }
 
 .large-menu {
@@ -744,8 +887,6 @@ hr {
 
 .large-menu__tab {
   flex: 1 0 33.33%;
-  border: 1px solid rgb(255, 231, 204);
-  background-color: rgba(255, 251, 235, 0.7);
   text-align: center;
   padding: 1rem;
   font-size: clamp(1.35rem, 1.2rem + 1vw, 2rem);
@@ -753,26 +894,8 @@ hr {
   position: relative;
 }
 
-.large-menu__tab:hover {
-  background-color: rgb(248, 203, 166);
-}
-
 .large-menu__tab--active {
-  border: 1px solid rgb(255, 231, 204);
-  background-color: rgb(248, 203, 166);
   transition: 0.5s;
-}
-
-.large-menu__tab-link {
-  color: rgb(0, 0, 0);
-}
-
-.large-menu__tab--active > .large-menu__tab-link {
-  color: rgb(255, 251, 235);
-}
-
-.large-menu__tab:hover .large-menu__tab-link {
-  color: rgb(245, 245, 245);
 }
 
 .large-menu__tab-link::after {
@@ -781,23 +904,19 @@ hr {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1;
   content: "";
 }
 
 /* menu content */
 .large-food-menu {
-  display: none;
-  border: 1px solid rgb(255, 231, 204);
   border-top: 0px;
   text-align: left;
   line-height: 1.5;
-  background-color: rgb(255, 255, 255);
-}
-
-.large-food-menu {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
 
 /* menu description */
@@ -810,19 +929,9 @@ hr {
   display: inline-block;
 }
 
-.large-food-menu {
-  border-right: 1px solid rgb(255, 231, 204);
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-}
-
 .large-menu__item {
   display: grid;
   align-content: center;
-  border-bottom: 1px solid rgb(255, 231, 204);
 }
 
 .large-menu__item p {
@@ -834,8 +943,6 @@ hr {
 
 .large-menu__item-price {
   display: inline-block;
-  background-color: rgb(248, 203, 166);
-  color: rgb(255, 255, 255);
   text-align: center;
   font-weight: 700;
   font-size: clamp(1.2rem, 1rem + 1vw, 1.4rem);
@@ -852,15 +959,6 @@ hr {
   display: none;
 }
 
-@media all and (min-width: 25em) {
-  /* rounded border menu on wider screen */
-  .large-menu__tab {
-    border-radius: 25px 25px 0 0;
-  }
-  .large-food-menu {
-    border-radius: 0 0 15px 15px;
-  }
-}
 @media all and (min-width: 699.5px) {
   /* menu */
   .large-food-menu {
@@ -873,7 +971,6 @@ hr {
   .large-menu__item {
     display: grid;
     align-items: center;
-    border-right: 1px solid rgb(255, 231, 204);
   }
   .large-menu__item--1 {
     grid-area: 1/1/2/2;
@@ -915,140 +1012,7 @@ hr {
     max-width: 90%;
   }
 }
-/* menu content */
-.large-food-menu {
-  display: none;
-  border: 1px solid rgb(255, 231, 204);
-  border-top: 0px;
-  text-align: left;
-  line-height: 1.5;
-  background-color: rgb(255, 255, 255);
-}
-
-.large-food-menu {
-  display: flex;
-  flex-direction: column;
-}
-
-.large-food-menu {
-  border-right: 1px solid rgb(255, 231, 204);
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-}
-
-/* menu description */
-.large-food-menu h3 {
-  margin: 0;
-  padding: 2%;
-  padding-left: calc(0.5rem + 1vw);
-  font-weight: bold;
-  font-size: clamp(1.35rem, 1.2rem + 1vw, 1.75rem);
-  display: inline-block;
-}
-
-.large-menu__item {
-  display: grid;
-  align-content: center;
-  border-bottom: 1px solid rgb(255, 231, 204);
-}
-
-.large-menu__item p {
-  margin: 0;
-  padding: 2%;
-  padding-left: calc(0.5rem + 1vw);
-  font-size: clamp(1.3rem, 0.9rem + 1vw, 1.5rem);
-}
-
-.large-menu__item-price {
-  display: inline-block;
-  background-color: rgb(248, 203, 166);
-  color: rgb(255, 255, 255);
-  text-align: center;
-  font-weight: 700;
-  font-size: clamp(1.2rem, 1rem + 1vw, 1.4rem);
-  border-radius: 10px;
-  width: 75px;
-  height: 40px;
-  padding-block: 1rem;
-  line-height: 0.75rem;
-  margin-left: 0.5rem;
-}
-
-/* menu photos */
-.large-menu__image > * {
-  display: none;
-}
-
-@media all and (min-width: 25em) {
-  /* rounded border menu on wider screen */
-  .large-menu__tab {
-    border-radius: 25px 25px 0 0;
-  }
-  .large-food-menu {
-    border-radius: 0 0 15px 15px;
-  }
-}
-@media all and (min-width: 699.5px) {
-  /* menu */
-  .large-food-menu {
-    display: grid;
-    grid-template-columns: 7fr 5fr;
-    grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-  }
-  .large-menu__item {
-    display: grid;
-    align-items: center;
-    border-right: 1px solid rgb(255, 231, 204);
-  }
-  .large-menu__item--1 {
-    grid-area: 1/1/2/2;
-  }
-  .large-menu__item--2 {
-    grid-area: 2/1/3/2;
-  }
-  .large-menu__item--3 {
-    grid-area: 3/1/4/2;
-  }
-  .large-menu__image {
-    grid-area: 1/2/4/3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 2%;
-    margin-inline: auto;
-  }
-  .large-menu__image img {
-    max-width: 90%;
-  }
-  .large-menu__image > * {
-    display: block;
-  }
-}
-.large-menu__image-description {
-  text-shadow: 1px 1px rgb(255, 239, 213);
-  font-size: clamp(1.3rem, 0.9rem + 1vw, 1.5rem);
-  margin-top: 0.5rem;
-  margin-bottom: calc(0.65rem + 1vw);
-}
-
-@media screen and (min-width: 991.5px) {
-  .large-food-menu {
-    grid-template-columns: 2fr 1fr;
-  }
-  .large-menu__image {
-    max-width: 90%;
-  }
-}
-/* Style the buttons that are used to open and close the accordion panel */
 .small-menu__accordion {
-  background-color: rgba(248, 203, 166, 0.7);
-  color: rgb(0, 0, 0);
   cursor: pointer;
   padding: 0.8rem;
   width: 100%;
@@ -1060,30 +1024,20 @@ hr {
   font-family: "Rancho", cursive;
   margin-block-start: 0.5rem;
 }
-
-.small-menu__accordion:hover,
-.small-menu__accordion--active {
-  background-color: rgb(248, 203, 166);
-  color: rgb(255, 251, 235);
-}
-
 .small-menu__accordion:after {
-  content: "+"; /* Unicode character for "plus" sign (+) */
-  color: rgb(119, 119, 119);
+  content: "+";
   font-weight: bold;
   float: right;
   margin-left: 5px;
 }
 
 .small-menu__accordion--active:after {
-  content: "−"; /* Unicode character for "minus" sign (-) */
-  color: rgb(255, 251, 235);
+  content: "−";
 }
 
 /* Style the accordion panel. Note: hidden by default */
 .small-menu__panel {
   padding: 0 0.5rem;
-  background-color: rgb(255, 255, 255);
   overflow: hidden;
   max-height: 0;
   transition: max-height 0.25s ease-out;
@@ -1092,7 +1046,6 @@ hr {
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 2px;
   grid-row-gap: 0px;
-  border: 1px solid rgb(255, 231, 204);
   border-top: 0;
 }
 
@@ -1161,8 +1114,6 @@ hr {
   position: absolute;
   left: 5%;
   bottom: -2rem;
-  background-color: rgb(229, 186, 115);
-  color: rgb(243, 243, 243);
   margin: auto;
   padding: 8px 12px;
   width: 90%;
@@ -1178,7 +1129,6 @@ hr {
   position: absolute;
   top: 50%;
   width: auto;
-  color: rgb(229, 186, 115);
   font-weight: bold;
   font-size: 16px;
   transition: 0.6s ease;
@@ -1206,7 +1156,6 @@ hr {
     position: absolute;
     top: 45%;
     width: auto;
-    color: rgb(229, 186, 115);
     font-weight: bold;
     font-size: 20px;
     transition: 0.6s ease;
@@ -1230,15 +1179,9 @@ hr {
   height: 0.625rem;
   width: 10px;
   margin: 0 2px;
-  background-color: rgb(255, 231, 204);
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
-}
-
-.small-menu__slideshow-dot:hover,
-.slideshow-dot--active {
-  background-color: rgb(248, 203, 166);
 }
 
 /* Fading animation */
@@ -1255,89 +1198,6 @@ hr {
     opacity: 1;
   }
 }
-.reservation__form--button {
-  font-family: inherit;
-  font-size: 1.25rem;
-  padding: 10px 15px;
-  border: none;
-  border-radius: 10px;
-  float: right;
-  cursor: pointer;
-}
-
-section:not(:first-of-type) {
-  max-width: 100%;
-  padding-inline: 1rem;
-  margin-inline: auto;
-  padding-block: calc(1rem + 1.5vw);
-}
-@media all and (min-width: 36em) {
-  section:not(:first-of-type) {
-    max-width: 800px;
-    padding-inline: 2rem;
-  }
-}
-@media all and (min-width: 62em) {
-  section:not(:first-of-type) {
-    max-width: 1150px;
-    padding-inline: 2.5rem;
-  }
-}
-@media all and (min-width: 78.125em) {
-  section:not(:first-of-type) {
-    max-width: 1500px;
-    padding-inline: 2rem;
-  }
-}
-
-section#menu {
-  max-width: 100%;
-}
-@media all and (min-width: 78.125em) {
-  section#menu {
-    max-width: 1300px;
-    padding-inline: 2rem;
-  }
-}
-
-footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding-block: calc(1rem + 1vw);
-}
-
-.social-icons > * {
-  margin: 20px 10px;
-}
-
-#home {
-  padding-top: 70px;
-  position: relative;
-  border-bottom: 1px solid rgb(229, 186, 115);
-}
-@media all and (min-width: 36em) {
-  #home {
-    padding-top: 0;
-  }
-}
-
-.hero-text {
-  position: absolute;
-  bottom: 1rem;
-  left: 1rem;
-  color: rgb(240, 248, 255);
-  z-index: 10;
-}
-@media all and (min-width: 36em) {
-  .hero-text {
-    bottom: 5%;
-    left: 3%;
-  }
-}
-
 .small-menu__carousel {
   display: block;
   margin-bottom: 1.5rem;
@@ -1364,6 +1224,66 @@ footer {
     display: block;
   }
 }
+@media all and (min-width: 25em) {
+  /* rounded border menu on wider screen */
+  .large-menu__tab {
+    border-radius: 25px 25px 0 0;
+  }
+  .large-food-menu {
+    border-radius: 0 0 15px 15px;
+  }
+}
+.reservation__photo img {
+  max-height: 400px;
+  max-width: 400px;
+  width: 95%;
+  height: auto;
+  border-radius: 0.375rem;
+  padding: 0.25rem;
+}
+
+@media all and (min-width: 575.5px) {
+  .reservation__photo img {
+    max-height: 400px;
+    max-width: 600px;
+  }
+}
+.reservation__form--button {
+  font-family: inherit;
+  font-size: 1.25rem;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 10px;
+  float: right;
+  cursor: pointer;
+}
+
+.input-control {
+  display: block;
+  width: 100%;
+  height: 3rem;
+  padding: 0.375rem 0.75rem;
+  font-size: 1.3rem;
+  font-weight: 400;
+  line-height: 1.5;
+  font-family: inherit;
+  background-clip: padding-box;
+  border-radius: 0.375rem;
+}
+
+.textarea-control {
+  display: block;
+  width: 100%;
+  height: 6rem;
+  padding: 0.375rem 0.75rem;
+  font-size: 1.3rem;
+  font-weight: 400;
+  line-height: 1.5;
+  font-family: inherit;
+  background-clip: padding-box;
+  border-radius: 0.375rem;
+}
+
 .reservation {
   display: flex;
   flex-direction: column;
@@ -1556,10 +1476,6 @@ footer {
     justify-content: center;
     align-items: start;
   }
-}
-
-.contact__icon {
-  color: rgb(119, 119, 119);
 }
 
 @media all and (min-width: 299.5px) {
