--- a/scss/sections/menus/_structure.scss
+++ b/scss/sections/menus/_structure.scss
@@ -1,4 +1,4 @@
-@use '../partials/mixins' as *;
+@use '../../partials/mixins' as *;
 // menu on small screen: accordion + carousel
 // menu on medium screen: menu tab, content w/o photos + carousel
 // menu on large screen: menu tab, content w/ photos
@@ -28,5 +28,16 @@
 
     .large-menu {
         display: block;
+    }
+}
+
+@include custom-min-mq (400) {
+    /* rounded border menu on wider screen */
+    .large-menu__tab {
+        border-radius: 25px 25px 0 0;
+    }
+
+    .large-food-menu {
+        border-radius: 0 0 15px 15px;
     }
 }
