--- a/scss/sections/reservation-form/_inputs.scss
+++ b/scss/sections/reservation-form/_inputs.scss
@@ -1,10 +1,7 @@
-@use '../partials/variables' as *;
-@use '../partials/colors' as *;
-
-.textarea-control {
+.input-control {
     display: block;
     width: 100%;
-    height: 6rem;
+    height: 3rem;
     padding: .375rem .75rem;
     font-size: 1.3rem;
     font-weight: 400;
