--- a/scss/sections/reservation-form/_textarea.scss
+++ b/scss/sections/reservation-form/_textarea.scss
@@ -1,10 +1,7 @@
-@use '../partials/variables' as *;
-@use '../partials/colors' as *;
-
-.input-control {
+.textarea-control {
     display: block;
     width: 100%;
-    height: 3rem;
+    height: 6rem;
     padding: .375rem .75rem;
     font-size: 1.3rem;
     font-weight: 400;
