--- a/scss/base/_normalize.scss
+++ b/scss/base/_normalize.scss
@@ -10,7 +10,7 @@
 
  html {
     line-height: 1.5; /* 1 */
-    -webkit-text-size-adjust: 100%; /* 2 */
+    // -webkit-text-size-adjust: 100%; /* 2 */
   }
 
   
