--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -3,19 +3,22 @@
 @use '../partials/mixins' as *;
 @use '../partials/typography' as *;
 
+// navbar still here when scrolling down!!
 .navbar {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    padding-block: 0.75rem;
     width: 100%;
     position: fixed;
     top: 0;
     right: 0;
     left: 0;
-    font-size: clamp(1.5rem, 1rem + 1vw, 2rem);
+
+    @include min-mq(sm) {
+        padding: 0;
+    }
 }
 
 .navbar__container {
@@ -26,14 +29,31 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    padding-inline: 1rem;
+
+    @include min-mq (md) {
+        padding-inline: 1.5rem;
+    }
+
+    @include min-mq(lg) {
+        padding-block: 0.25rem;
+    }
+
+    @include min-mq (xl) {
+        padding-inline: 2rem;
+        padding-block: 0.5rem;
+    }
 }
 
 .navbar__brand {
-    padding-top: 0.3125rem;
-    margin-left: 1rem;
     text-decoration: none;
     white-space: nowrap;
     align-items: center;
+
+    @include min-mq(sm) {
+        display: flex;
+        justify-content: flex-start;
+    }
 }
 
 .navbar__toggler {
@@ -43,7 +63,6 @@
     border-radius: 0.25rem;
     display: inline-block;
     cursor: pointer;
-    margin: 0 0.5rem 0 0;
 
     &:hover {
         text-decoration: none;
@@ -51,6 +70,10 @@
 
     &:focus {
         text-decoration: none;
+    }
+
+    @include min-mq(sm) {
+        display: none;
     }
 }
 
@@ -62,45 +85,8 @@
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.3s ease-in-out;
-}
 
-.navbar__nav {
-    display: flex;
-    flex-direction: column;
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
-}
-
-.navbar__nav-link {
-    padding-right: 0;
-    padding-left: 0;
-    display: block;
-    margin: 0;
-    padding: 0;
-}
-
-.navbar__nav-item {
-    padding: 1rem 0;
-    text-align: center;
-}
-
-@include min-mq(sm) {
-    .navbar {
-        padding-right: 25px;
-    }
-
-    .navbar__brand {
-        padding-left: 0.5rem;
-        display: flex;
-        justify-content: flex-start;
-    }
-
-    .navbar__toggler {
-        display: none;
-    }
-
-    .navbar__collapse {
+    @include min-mq(sm) {
         display: flex;
         justify-content: flex-end;
         flex-basis: 0;
@@ -110,15 +96,39 @@
         padding: 0;
         min-height: 75px;
     }
+}
 
-    .navbar__nav {
+.navbar__nav {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+
+    @include min-mq(sm) {
         flex-direction: row;
         margin: 0;
         padding: 0;
     }
+}
 
-    .navbar__nav-link {
-        padding-right: 0.5rem;
-        padding-left: 0.5rem;
+.navbar__nav-link {
+    display: block;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar__nav-item {
+    padding-block: 1rem;
+    padding-right: 0;
+    text-align: center;
+
+    @include min-mq(sm) {
+        padding-left: 1.5rem;
+    }
+
+    @include min-mq(lg) {
+        padding-left: 2rem;
+        padding-block: 0;
     }
 }
