--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -4,9 +4,9 @@ footer {
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding-block: calc(1rem + 1vw);
+    padding-block: calc(1.5rem + 1vw);
 }
 
-.social-icons > * {
-    margin: 20px 10px;
+.social-icons i {
+    margin: 8px 10px 20px 10px;
 }
