--- a/scss/sections/_find-us.scss
+++ b/scss/sections/_find-us.scss
@@ -3,102 +3,102 @@
 .findus {
     display: flex;
     flex-direction: column;
+
+    @include min-mq (sm) {
+        flex-direction: row;
+    }
 }
 
 .findus__logofont-container {
     display: none;
+
+    @include min-mq (lg) {
+        display: block;
+        flex: 1 0 33.33%;
+    }
+
+    @include min-mq (xl) {
+        flex: 1 0 50%;
+    }
 }
 
 .findus__contact-container,
 .findus__openhour-container {
     flex: 1 0 100%;
     width: 100%;
-    margin: 1rem auto;
+    margin: 0.5rem auto;
     display: flex;
     justify-content: center;
+
+    @include custom-min-mq(299.5) {
+        margin: 0 auto;
+    }
+
+    @include min-mq (sm) {
+        flex: 1 0 47.5%;
+    }
+
+    @include min-mq (lg) {
+        flex: 1 0 33.33%;
+    }
+
+    @include min-mq (xl) {
+        flex: 1 0 25%;
+    }
 }
+
+.findus__contact-container {
+
+    @include custom-between-mq(575.5, 991.5) {
+        justify-content: flex-start;
+    }
+}
+
+.findus__openhour-container {
+
+    @include custom-between-mq(299.5, 575.5) {
+        padding-top: 2rem;
+    }
+
+    @include min-mq (sm) {
+        justify-content: flex-end;
+    }
+}
+
 
 .findus__contact-content,
 .findus__openhour-content {
     max-width: 270px;
     width: 100%;
-}
 
-.findus__grid {
-
-    @include custom-min-mq (300) {
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(2, auto);
-    grid-column-gap: 10px;
-    grid-row-gap: 0;
-    justify-content: center;
-    align-items: start;
-    }
-}
-
-.openhour-grid {
-
-    @include custom-min-mq (300) {
-    display: grid;
-    grid-template-rows: repeat(7, 1fr);
-    grid-template-columns: repeat(2, auto);
-    grid-column-gap: 10px;
-    grid-row-gap: 0;
-    justify-content: center;
-    align-items: start;
-    }
-}
-
-@media all and (min-width: 299.5px) {
-    .findus__contact-container,
-    .findus__openhour-container {
-        margin: 0 auto;
-    }
-}
-
-@include min-mq (sm) {
-    .findus {
-        flex-direction: row;
-    }
-
-    .findus__contact-container,
-    .findus__openhour-container {
-        flex: 1 0 47.5%;
-    }
-
-    .findus__contact-content,
-    .findus__openhour-content {
+    @include min-mq (sm) {
         max-width: 320px;
         width: 95%;
     }
 }
 
-// @media all and (min-width: 1024.5px) {
-    @include min-mq (lg) {
-    .findus__logofont-container {
-        display: block;
-    }
+.findus__grid {
 
-    .findus__logofont-container,
-    .findus__contact-container,
-    .findus__openhour-container {
-        flex: 1 0 33.33%;
-    }
-
-    .findus__openhour-container {
-        justify-content: flex-end;
+    @include custom-min-mq (299.5) {
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: repeat(2, auto);
+        grid-column-gap: 10px;
+        grid-row-gap: 0;
+        justify-content: center;
+        align-items: start;
     }
 }
 
-// @media all and (min-width: 1365.5px) {
-    @include min-mq (xl) {
-    .findus__logofont-container {
-        flex: 1 0 50%;
-    }
+.openhour-grid {
 
-    .findus__contact-container,
-    .findus__openhour-container {
-        flex: 1 0 25%;
+    @include custom-min-mq (299.5) {
+        display: grid;
+        grid-template-rows: repeat(7, 1fr);
+        grid-template-columns: repeat(2, auto);
+        grid-column-gap: 10px;
+        grid-row-gap: 0;
+        justify-content: center;
+        align-items: start;
     }
 }
