--- a/scss/style.css
+++ b/scss/style.css
@@ -63,7 +63,6 @@ input{
  */
 html {
   line-height: 1.5; /* 1 */
-  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -157,13 +156,6 @@ button::-moz-focus-inner,
  * 1. Add border box sizing in all browsers (opinionated).
  * 2. Backgrounds do not repeat by default (opinionated).
  */
-*,
-::before,
-::after {
-  box-sizing: border-box; /* 1 */
-  background-repeat: no-repeat; /* 2 */
-}
-
 /**
  * 1. Add text decoration inheritance in all browsers (opinionated).
  * 2. Add vertical alignment inheritance in all browsers (opinionated).
@@ -327,6 +319,55 @@ button::-moz-focus-inner,
 :where([aria-hidden=false i][hidden]:not(:focus)) {
   clip: rect(0, 0, 0, 0);
   position: absolute;
+}
+
+html {
+  box-sizing: border-box;
+  background-repeat: no-repeat;
+  scroll-behavior: smooth;
+  height: 100%;
+}
+
+*,
+::before,
+::after {
+  box-sizing: inherit;
+}
+
+body {
+  min-height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+hr {
+  margin: 0;
+  opacity: 0.25;
+}
+
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+
+.float-none {
+  float: none;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
 body {
@@ -522,72 +563,27 @@ social icons in footer  */
   color: rgb(172, 113, 42);
 }
 
-html {
-  box-sizing: border-box;
-  background-repeat: no-repeat;
-  scroll-behavior: smooth;
-  height: 100%;
-  font-size: 100%;
-  line-height: 1.5;
-  -moz-text-size-adjust: none;
-       text-size-adjust: none;
-  -webkit-text-size-adjust: none;
-}
-
-*,
-::before,
-::after {
-  box-sizing: inherit;
-}
-
 body {
-  min-height: 100vh;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  position: relative;
   font-family: "Rancho", cursive;
   font-size: clamp(1.25rem, 0.9rem + 1vw, 1.5rem);
 }
 
-a {
-  text-decoration: none;
-  cursor: pointer;
-}
-
-hr {
-  margin: 0;
-  opacity: 0.25;
-}
-
-.float-left {
-  float: left;
-}
-
-.float-right {
-  float: right;
-}
-
-.float-none {
-  float: none;
-}
-
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-/* Dancing script for home text */
-.hero-text {
-  font-family: "Dancing Script", cursive;
-}
-
-/* logo front-size in navbar and findus */
 .g-logofont {
   font-family: "Dancing Script", cursive;
   font-size: clamp(2rem, 1.5rem + 1vw, 2.5rem);
-  margin: 0;
+}
+
+.navbar {
+  font-size: clamp(1.5rem, 1rem + 1vw, 2rem);
+}
+
+.navbar__toggler {
+  font-size: 1.5rem;
+  line-height: 1;
+}
+
+.hero-text {
+  font-family: "Dancing Script", cursive;
 }
 
 .hero-text h1 {
@@ -659,6 +655,14 @@ hr {
   height: 80px;
   animation: spin 2s linear infinite;
 }
+@media all and (min-width: 36em) {
+  .loader__object {
+    border: 16px solid rgb(243, 243, 243);
+    border-top: 16px solid rgb(248, 203, 166);
+    width: 120px;
+    height: 120px;
+  }
+}
 
 @keyframes spin {
   0% {
@@ -673,27 +677,22 @@ hr {
   font-family: "Dancing Script", cursive;
 }
 
-@media all and (min-width: 575.5px) {
-  .loader__object {
-    border: 16px solid rgb(243, 243, 243);
-    border-top: 16px solid rgb(248, 203, 166);
-    width: 120px;
-    height: 120px;
-  }
-}
 .navbar {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-block: 0.75rem;
   width: 100%;
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
-  font-size: clamp(1.5rem, 1rem + 1vw, 2rem);
+}
+@media all and (min-width: 36em) {
+  .navbar {
+    padding: 0;
+  }
 }
 
 .navbar__container {
@@ -704,14 +703,35 @@ hr {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  padding-inline: 1rem;
+}
+@media all and (min-width: 48em) {
+  .navbar__container {
+    padding-inline: 1.5rem;
+  }
+}
+@media all and (min-width: 62em) {
+  .navbar__container {
+    padding-block: 0.25rem;
+  }
+}
+@media all and (min-width: 78.125em) {
+  .navbar__container {
+    padding-inline: 2rem;
+    padding-block: 0.5rem;
+  }
 }
 
 .navbar__brand {
-  padding-top: 0.3125rem;
-  margin-left: 1rem;
   text-decoration: none;
   white-space: nowrap;
   align-items: center;
+}
+@media all and (min-width: 36em) {
+  .navbar__brand {
+    display: flex;
+    justify-content: flex-start;
+  }
 }
 
 .navbar__toggler {
@@ -721,13 +741,17 @@ hr {
   border-radius: 0.25rem;
   display: inline-block;
   cursor: pointer;
-  margin: 0 0.5rem 0 0;
 }
 .navbar__toggler:hover {
   text-decoration: none;
 }
 .navbar__toggler:focus {
   text-decoration: none;
+}
+@media all and (min-width: 36em) {
+  .navbar__toggler {
+    display: none;
+  }
 }
 
 .navbar__collapse {
@@ -739,40 +763,7 @@ hr {
   overflow: hidden;
   transition: max-height 0.3s ease-in-out;
 }
-
-.navbar__nav {
-  display: flex;
-  flex-direction: column;
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-}
-
-.navbar__nav-link {
-  padding-right: 0;
-  padding-left: 0;
-  display: block;
-  margin: 0;
-  padding: 0;
-}
-
-.navbar__nav-item {
-  padding: 1rem 0;
-  text-align: center;
-}
-
 @media all and (min-width: 36em) {
-  .navbar {
-    padding-right: 25px;
-  }
-  .navbar__brand {
-    padding-left: 0.5rem;
-    display: flex;
-    justify-content: flex-start;
-  }
-  .navbar__toggler {
-    display: none;
-  }
   .navbar__collapse {
     display: flex;
     justify-content: flex-end;
@@ -783,16 +774,46 @@ hr {
     padding: 0;
     min-height: 75px;
   }
+}
+
+.navbar__nav {
+  display: flex;
+  flex-direction: column;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+@media all and (min-width: 36em) {
   .navbar__nav {
     flex-direction: row;
     margin: 0;
     padding: 0;
   }
-  .navbar__nav-link {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
+}
+
+.navbar__nav-link {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar__nav-item {
+  padding-block: 1rem;
+  padding-right: 0;
+  text-align: center;
+}
+@media all and (min-width: 36em) {
+  .navbar__nav-item {
+    padding-left: 1.5rem;
   }
 }
+@media all and (min-width: 62em) {
+  .navbar__nav-item {
+    padding-left: 2rem;
+    padding-block: 0;
+  }
+}
+
 section:not(:first-of-type) {
   max-width: 100%;
   padding-inline: 1rem;
@@ -834,11 +855,11 @@ footer {
   justify-content: center;
   align-items: center;
   text-align: center;
-  padding-block: calc(1rem + 1vw);
+  padding-block: calc(1.5rem + 1vw);
 }
 
-.social-icons > * {
-  margin: 20px 10px;
+.social-icons i {
+  margin: 8px 10px 20px 10px;
 }
 
 #home {
@@ -1434,18 +1455,75 @@ footer {
   display: flex;
   flex-direction: column;
 }
+@media all and (min-width: 36em) {
+  .findus {
+    flex-direction: row;
+  }
+}
 
 .findus__logofont-container {
   display: none;
+}
+@media all and (min-width: 62em) {
+  .findus__logofont-container {
+    display: block;
+    flex: 1 0 33.33%;
+  }
+}
+@media all and (min-width: 78.125em) {
+  .findus__logofont-container {
+    flex: 1 0 50%;
+  }
 }
 
 .findus__contact-container,
 .findus__openhour-container {
   flex: 1 0 100%;
   width: 100%;
-  margin: 1rem auto;
+  margin: 0.5rem auto;
   display: flex;
   justify-content: center;
+}
+@media all and (min-width: 18.71875em) {
+  .findus__contact-container,
+  .findus__openhour-container {
+    margin: 0 auto;
+  }
+}
+@media all and (min-width: 36em) {
+  .findus__contact-container,
+  .findus__openhour-container {
+    flex: 1 0 47.5%;
+  }
+}
+@media all and (min-width: 62em) {
+  .findus__contact-container,
+  .findus__openhour-container {
+    flex: 1 0 33.33%;
+  }
+}
+@media all and (min-width: 78.125em) {
+  .findus__contact-container,
+  .findus__openhour-container {
+    flex: 1 0 25%;
+  }
+}
+
+@media all and (min-width: 35.96875em) and (max-width: 61.9675em) {
+  .findus__contact-container {
+    justify-content: flex-start;
+  }
+}
+
+@media all and (min-width: 18.71875em) and (max-width: 35.9675em) {
+  .findus__openhour-container {
+    padding-top: 2rem;
+  }
+}
+@media all and (min-width: 36em) {
+  .findus__openhour-container {
+    justify-content: flex-end;
+  }
 }
 
 .findus__contact-content,
@@ -1453,8 +1531,15 @@ footer {
   max-width: 270px;
   width: 100%;
 }
+@media all and (min-width: 36em) {
+  .findus__contact-content,
+  .findus__openhour-content {
+    max-width: 320px;
+    width: 95%;
+  }
+}
 
-@media all and (min-width: 18.75em) {
+@media all and (min-width: 18.71875em) {
   .findus__grid {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
@@ -1466,7 +1551,7 @@ footer {
   }
 }
 
-@media all and (min-width: 18.75em) {
+@media all and (min-width: 18.71875em) {
   .openhour-grid {
     display: grid;
     grid-template-rows: repeat(7, 1fr);
@@ -1475,48 +1560,5 @@ footer {
     grid-row-gap: 0;
     justify-content: center;
     align-items: start;
-  }
-}
-
-@media all and (min-width: 299.5px) {
-  .findus__contact-container,
-  .findus__openhour-container {
-    margin: 0 auto;
-  }
-}
-@media all and (min-width: 36em) {
-  .findus {
-    flex-direction: row;
-  }
-  .findus__contact-container,
-  .findus__openhour-container {
-    flex: 1 0 47.5%;
-  }
-  .findus__contact-content,
-  .findus__openhour-content {
-    max-width: 320px;
-    width: 95%;
-  }
-}
-@media all and (min-width: 62em) {
-  .findus__logofont-container {
-    display: block;
-  }
-  .findus__logofont-container,
-  .findus__contact-container,
-  .findus__openhour-container {
-    flex: 1 0 33.33%;
-  }
-  .findus__openhour-container {
-    justify-content: flex-end;
-  }
-}
-@media all and (min-width: 78.125em) {
-  .findus__logofont-container {
-    flex: 1 0 50%;
-  }
-  .findus__contact-container,
-  .findus__openhour-container {
-    flex: 1 0 25%;
   }
 }/*# sourceMappingURL=style.css.map */
